# my-playground-project

./: .gitignore  Dockerfile  main.py  pyproject.toml
notebooks/: TS_forecasting_with_ml.ipynb  TestNotebookForConflicts.ipynb  Time series exercises.ipynb  UnivariateLinearRegression.ipynb  clustering.ipynb  font.ttx
playgroundproj/: main.py  setup.py
playgroundproj/clustering/: main.py
playgroundproj/mypackage/: mymodule1.py
playgroundproj/playgroundproj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
