[tool.poetry]
name = "my-playground-project"
version = "0.1.0"
description = ""
authors = ["Amalia Goia <amalia.goia@cloudflight.io>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.6.3"
jupyter = "^1.0.0"
pandas = "^1.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
opencv-python = "^4.5.5"
matplotlib = "*"
numpy= "*"
seaborn= "*"
scikit-learn= "*"
ipython= "*"
kneed = "^0.7.0"
fonttools = "^4.30.0"
playgroundproj = { path = "./playgroundproj/", develop = true }
kmodes = "^0.12.1"
nltk = "^3.7"
gensim = "^4.1.2"
statsmodels = "^0.13.2"
xgboost = "^1.6.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
